--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -85,13 +85,6 @@
                </property>
               </widget>
              </item>
-             <item row="1" column="1">
-              <widget class="QLineEdit" name="ipSetting">
-               <property name="text">
-                <string>30.10.23.13</string>
-               </property>
-              </widget>
-             </item>
              <item row="3" column="0">
               <widget class="QLabel" name="label_8">
                <property name="text">
@@ -147,6 +140,13 @@
                 </size>
                </property>
               </spacer>
+             </item>
+             <item row="1" column="1">
+              <widget class="QLabel" name="ipSetting">
+               <property name="text">
+                <string>0.0.0.0</string>
+               </property>
+              </widget>
              </item>
             </layout>
            </item>
@@ -269,6 +269,20 @@
             </size>
            </property>
           </spacer>
+         </item>
+         <item row="9" column="0">
+          <widget class="QLabel" name="label_11">
+           <property name="text">
+            <string>Ekran Konumu</string>
+           </property>
+          </widget>
+         </item>
+         <item row="9" column="1">
+          <widget class="QLineEdit" name="screen_pos">
+           <property name="text">
+            <string>0,0</string>
+           </property>
+          </widget>
          </item>
         </layout>
        </widget>
