--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -92,13 +92,6 @@
                </property>
               </widget>
              </item>
-             <item row="3" column="1">
-              <widget class="QLineEdit" name="portSetting">
-               <property name="text">
-                <string>1234</string>
-               </property>
-              </widget>
-             </item>
              <item row="4" column="0">
               <widget class="QLabel" name="label_5">
                <property name="text">
@@ -145,6 +138,19 @@
               <widget class="QLabel" name="ipSetting">
                <property name="text">
                 <string>0.0.0.0</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="1">
+              <widget class="QSpinBox" name="portSetting">
+               <property name="minimum">
+                <number>1025</number>
+               </property>
+               <property name="maximum">
+                <number>65000</number>
+               </property>
+               <property name="value">
+                <number>10000</number>
                </property>
               </widget>
              </item>
@@ -387,7 +393,7 @@
      <x>0</x>
      <y>0</y>
      <width>653</width>
-     <height>29</height>
+     <height>27</height>
     </rect>
    </property>
    <property name="defaultUp">
